chore: fix JDK deprecations.